# wsh

./: Cargo.toml  README.md  build.rs  fopencookie.h  zsh.h
lua/: wish.lua
lua/wish/: api.lua  autosuggestions.lua  background-job.lua  completion.lua  custom_command.lua  ft.lua  history-selector.lua  history.lua  insert-last-word.lua  iter.lua  keybind.lua  killring.lua  live-preview.lua  ls_colors.lua  paste.lua  plugin.lua  rainbow-brackets.lua  selection-widget.lua  style.lua  syntax-highlight.lua  syntax-query.lua  table.lua  utf8.lua
lua/wish/extras/: autosuggestions.lua  calculator.lua  debug-syntax.lua  debug_syntax.lua  ft.lua  live-preview.lua  lua_cmd.lua  mouse-demo.lua  python_cmd.lua  rainbow-brackets.lua
lua/wish/selection-widget/: default.lua  fzf.lua
src/: async_runtime.rs  buffer.rs  c_string_array.rs  canceller.rs  completion.rs  event_stream.rs  events.rs  fanos.rs  fork_lock.rs  history.rs  interrupter.rs  keybind.rs  lib.rs  logging.rs  lua.rs  main.rs  pauser.rs  print_lock.rs  prompt.rs  shell.rs  signals.rs  string.rs  timed_lock.rs  tui.rs  ui.rs  unsafe_send.rs  utils.rs  zle_watch_fds.rs  zsh.rs
src/keybind/: event.rs  key.rs  mouse.rs  parser.rs
src/lua/: api.rs  array.rs  asyncio.rs  auto_from_lua.rs  completion.rs  events.rs  functions.rs  history.rs  keybind.rs  log.rs  parser.rs  process.rs  regex.rs  string.rs  tui.rs  variables.rs
src/lua/api/: asyncio.rs  completion.rs  events.rs  functions.rs  history.rs  keybind.rs  log.rs  number.rs  parser.rs  process.rs  regex.rs  string.rs  tui.rs  variables.rs
src/lua/api/asyncio/: file.rs
src/lua/api/process/: shell.rs  spawn.rs  subshell.rs  zpty.rs
src/lua/asyncio/: file.rs
src/lua/asyncio/file/: zpty.rs
src/lua/process/: shell.rs  spawn.rs  subshell.rs  zpty.rs
src/shell/: actor_macro.rs  externs.rs  file_stream.rs  zsh.rs
src/shell/externs/: fork.rs  signals.rs
src/shell/zsh/: alloc.rs  bin_zle.rs  bindings.rs  builtin.rs  completion.rs  exit.rs  functions.rs  history.rs  linked_list.rs  meta_string.rs  parser.rs  process.rs  signals.rs  string.rs  variables.rs  widget.rs  zle_watch_fds.rs
src/tui/: ansi.rs  backend.rs  border.rs  buffer.rs  cell.rs  command_line.rs  drawer.rs  error_message.rs  layout.rs  rect.rs  scroll.rs  sizing.rs  status_bar.rs  style.rs  text.rs  widget.rs  wrap.rs
src/tui/command_line/: prompt.rs
src/tui/text/: highlight.rs  renderer.rs
src/tui/widget/: ansi.rs
src/ui/: buffer.rs  text_popup.rs  views.rs
src/ui/buffer/: suffix.rs
src/utils/: const_hash.rs  const_hash_map.rs  impl_deref_helper.rs  merge_sort_iter.rs  strong_weak_wrapper.rs
src/zsh/: bindings.rs  completion.rs  history.rs  parser.rs  string.rs  types.rs  variables.rs  widget.rs
zsh/: .zshrc
(+9 files in other folders)
