[package]
name = "wish"
version = "0.1.0"
edition = "2021"

[lib]
name = "wish"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
bstr = { version = "1.11.3", features = ["unicode"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.26"
mlua = { version = "0.10.3", features = ["luajit", "error-send", "macros", "vendored", "async", "send", "serialize"] }
nix = { version = "0.29.0", features = ["fs", "process", "pthread", "signal", "socket", "term", "uio"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
paste = "1.0.15"
ratatui = { version = "0.29.0", features = ["underline-color", "unstable-rendered-line-info"] }
serde = { version = "1.0.217", features = ["derive"] }
textwrap = "0.16.1"
tokio = { version = "1.43.0", features = ["fs", "io-util", "net", "process", "rt", "rt-multi-thread", "sync", "time"] }
unicode-width = "0.1.14"
zsh-sys = "0.1.1"

[build-dependencies]
bindgen = "0.71.1"
